fix load more container blocking horizontal scrollbar

--- a/src/app/pages/q-line-up/q-line-up.page.scss
+++ b/src/app/pages/q-line-up/q-line-up.page.scss
@@ -52,8 +52,8 @@
   .load-more-container {
     position: fixed;
     left: 0;
-    bottom: 0;
-    height: 100px;
+    bottom: 20px; // some offset for the scroll bars
+    height: 80px;
     width: 100%;
     display: flex;
     justify-content: center;
